# agentsafe

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
assets/: dashboard.html  flow_diagram.html  flow_web3_auth.html
contracts/: AgentRegistry.sol  EscrowSimple.sol  SessionGuard.sol
crates/agentsafe-core/: Cargo.toml
crates/agentsafe-core/src/: budget.rs  lib.rs  merkle.rs
examples/: basic_usage.py  x402_usage.py
rust/: Cargo.toml
rust/agentsafe-core/: Cargo.toml
rust/agentsafe-core/src/: lib.rs
scripts/: deploy.py
src/agentsafe/: __init__.py  safe_agent.py  sdk_client.py
src/agentsafe/api/: __init__.py  dashboard.html  routes.py  server.py
src/agentsafe/cli/: __init__.py  main.py
src/agentsafe/db/: __init__.py
src/agentsafe/guard/: __init__.py  anomaly.py  audit_chain.py  behavior.py  budget.py  kill_switch.py  known_providers.py  merkle.py  proof.py  session_id.py  time_lock.py  timelock.py  trust.py
src/agentsafe/mcp/: __init__.py  server.py
src/agentsafe/x402/: __init__.py  client.py  eip3009.py
tests/: test_agentsafe.py  test_api.py  test_e2e.py  test_web3_auth.py
