[project]
name = "agentsafe"
version = "0.4.0"
description = "Autonomous Agent Safety Kit for x402 Payments & Base Mainnet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.30",
    "eth-hash[pycryptodome]>=0.7",
    "web3>=6.0",
]

[project.optional-dependencies]
cli = ["typer>=0.9", "rich>=13.0"]
api = ["flask>=3.0"]
x402 = ["eip712>=0.2", "eth-account>=0.11"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
agentsafe = "agentsafe.cli.main:cli"
agentsafe-mcp = "agentsafe.mcp.server:app"

[project.entry-points."mcp.servers"]
agentsafe = "agentsafe.mcp.server:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
