[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsafe"
version = "0.1.0"
description = "Core Python SDK for AI agent safety guards"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "eth-account>=0.9",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]
mcp = [
    "mcp>=1.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
agentsafe-mcp = "agentsafe.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
