[package]
name = "agentsafe-core"
version = "0.1.0"
edition = "2024"
description = "Core safety engine for autonomous agents spending via x402"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
